add menu section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
                   <img src="images/logo1.jpg" alt="logo pic" height="100px" width="100px">
               </div>   
        </div>
-
+       <div id="menu">
+          <center>
+          <p>
+              You can order with us through this platform.<br>You have the flexibility of choosing the <b>crust</b> of pizza you want,
+              <b>Toppings</b>  and also the <b>siz</b> you want.<br><br> Have A look at our menu!!
+           </p>
+          </center>
+      </div>
    
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
                 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
