--- a/index.html
+++ b/index.html
@@ -49,6 +49,26 @@
            </p>
           </center>
       </div>
+      <br>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="./images/location.jpg" alt="" height="100px" width="100px">
+            <h5>LOCATION</h5>
+            <br>
+            <div>
+              <img src="./images/BBQPizza.jpeg" alt="" height="100px" width="100px">
+              <br>
+              <p>Pizza Size</p>
+            </div>
+            <div>
+              <select class="form-control size">
+                  <option label="Large" value="100">Large</option>
+                  <option label="Medium" value="50">Medium</option>
+                  <option label="Small" value="80">Small</option>
+                </select>
+              </div>
+            </div>
    
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
                 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
