add content to order form

--- a/index.html
+++ b/index.html
@@ -69,7 +69,21 @@
                 </select>
               </div>
             </div>
-   
+            <div class="col-md-4">
+                <img src="./images/ORDER.jpeg" alt="" height="100px" width="100px">
+                <h5>NO MINIMUM ORDER</h5>
+                <div class="">
+                    <img src="./images/PEPPERONIPizza.jpeg" alt="" height="100px" width="100px">
+                    <p>Toppings</p>
+                  </div>
+                  <div>
+                      <select class="form-control toppings">
+                          <option label="Black Olives" value="100">Black Olives</option>
+                          <option label="Extra Cheese" value="50">Extra Cheese</option>
+                          <option label="Pepperoni" value="80">Pepperoni</option>
+                        </select>
+                      </div>
+              </div>
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
                 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
