--- a/index.html
+++ b/index.html
@@ -54,12 +54,10 @@
         <div class="row">
           <div class="col-md-4">
             <img src="./images/location.jpg" alt="" height="100px" width="100px">
-            <h5>LOCATION</h5>
-            <br>
+            <h5><B>LOCATION</B></h5>
             <div>
               <img src="./images/BBQPizza.jpeg" alt="" height="100px" width="100px">
-              <br>
-              <p>Pizza Size</p>
+              <p><b>PIZZA SIZE</b></p>
             </div>
             <div>
               <select class="form-control size">
@@ -74,13 +72,28 @@
                 <h5>NO MINIMUM ORDER</h5>
                 <div class="">
                     <img src="./images/PEPPERONIPizza.jpeg" alt="" height="100px" width="100px">
-                    <p>Toppings</p>
+                    <p><B>TOPPINGS</B></p>
                   </div>
                   <div>
                       <select class="form-control toppings">
                           <option label="Black Olives" value="100">Black Olives</option>
                           <option label="Extra Cheese" value="50">Extra Cheese</option>
                           <option label="Pepperoni" value="80">Pepperoni</option>
+                        </select>
+                      </div>
+              </div>
+              <div class="col-md-4">
+                  <img src="./images/del2.jpg" alt="" height="100px" width="100px">
+                  <h5>DELIVERED TO YOUR DOOR STEP</h5>
+                <div>
+                    <img src="./images/ChickenPizza.jpeg" alt="" height="100px" width="100px">
+                    <p><b>CRUST</b></p>
+                  </div>
+                  <div>
+                      <select class="form-control crust">
+                          <option label="Stuffed" value="500">Stuffed</option>
+                          <option label="Gluten-Free" value="200">Gluten-Free</option>
+                          <option label="Crispy" value="300">Crispy</option>
                         </select>
                       </div>
               </div>
