--- a/index.html
+++ b/index.html
@@ -97,6 +97,32 @@
                         </select>
                       </div>
               </div>
+          </div>
+          </div>
+          <div class="text-center od">
+              <button class="btn btn-info order bg-primary" type="submit">Order</button>
+            </div>
+          
+          <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">Order No.</th>
+                    <th scope="col">Pizza Size</th>
+                    <th scope="col">Toppings</th>
+                    <th scope="col">Crust</th>
+                    <th scope="col">Total</th>
+                  </tr>
+                </thead>
+                <tbody id="pizza">
+                  <tr>
+                    <th scope="row">1</th>
+                    <td id="size"></td>
+                    <td id="toppings"></td>
+                    <td id="crust"></td>
+                    <td id="total"></td>
+                  </tr>
+                </tbody>
+              </table>
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
                 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
