--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
                   </tr>
                 </tbody>
               </table>
+              <div class="additional-buttons">
+                  <div class="text-center">
+                    <button class="btn btn-info add-pizza bg-primary" type="submit">Add Another</button>
+                    <div class="additional-info">
+                      <h3>The total is: <span></span></h3>
+                    </div>
+                    </div>
+                    <div class="text-right ">
+                        <button class="btn btn-info check-out bg-primary" type="submit">Checkout</button>
+                      </div>
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
                 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
